# LPM_OpenCV

./: CMakeLists.txt  DEMO.md  README.md  demo_lpm.cpp  how to use.md
data/: matches.txt
src/: kdtree.h  lpm_matcher.cpp  lpm_matcher.h
